schema/testdata/errors/relationships_create_nested_invalid_belongsto_id_input.keel
model Retreat {
    fields {
        retreatname Text @unique
        attendees RetreatPeople[]
    }

    actions {
        //expect-error:51:63:ActionInputError:Cannot provide the id of nested records which do not exist yet
        create createRetreat() with (retreatname, attendees.id)
        create createRetreat2() with (
            retreatname,
            attendees.isAttending,
            attendees.person.id,
        )
        create createRetreat3() with (
            retreatname,
            attendees.isAttending,
            //expect-error:13:41:ActionInputError:Cannot provide the id of nested records which do not exist yet
            attendees.person.projects.id,
        )
        create createRetreat4() with (
            retreatname,
            attendees.isAttending,
            attendees.person.projects.projectName,
        )
    }
}

model RetreatPeople {
    fields {
        isAttending Boolean
        retreat Retreat
        person Person
    }

    actions {
        create createRetreatPeople() with (isAttending, retreat.id, person.id)
    }
}

model Person {
    fields {
        name Text
        projects PersonProject[]
    }
}

model PersonProject {
    fields {
        person Person
        projectName Text
    }
}
